[gd_scene load_steps=7 format=3 uid="uid://b8nan7q5r3t1u"]

[ext_resource type="Script" uid="uid://0t6wmxfiixiq" path="res://scripts/DifficultyMenu.gd" id="1_difficulty_menu"]
[ext_resource type="Texture2D" uid="uid://5psmu2u6jx7n" path="res://assets/ui/difficulty_normal.png" id="2_normal"]
[ext_resource type="Shader" uid="uid://cstqok5jb3sb" path="res://shaders/DifficultyMenu.gdshader" id="2_opo3b"]
[ext_resource type="Texture2D" uid="uid://c52lhdd2akltu" path="res://assets/ui/difficulty_hard.png" id="3_hard"]
[ext_resource type="Texture2D" uid="uid://ppujy2081nxr" path="res://assets/ui/difficulty_expert.png" id="4_expert"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2grfk"]
shader = ExtResource("2_opo3b")
shader_parameter/color1 = Color(0.5, 0.15, 0.25, 0.6)
shader_parameter/color2 = Color(0.2, 0.3, 0.6, 0.7)
shader_parameter/speed = 1.3
shader_parameter/scale = 3.0

[node name="DifficultyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_difficulty_menu")

[node name="BackgroundLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackgroundGradient" type="ColorRect" parent="BackgroundLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.3665946, 0.3665946, 0.36659458, 1)

[node name="BackgroundPattern" type="ColorRect" parent="BackgroundLayer"]
material = SubResource("ShaderMaterial_2grfk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -650.0
offset_top = -350.0
offset_right = 650.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="TitleContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 8
alignment = 1

[node name="Title" type="Label" parent="MenuContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.9, 1)
theme_override_font_sizes/font_size = 42
text = "SELECT DIFFICULTY"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MenuContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Choose your challenge level"
horizontal_alignment = 1

[node name="DifficultyContainer" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 30
alignment = 1

[node name="NormalCard" type="Panel" parent="MenuContainer/DifficultyContainer"]
custom_minimum_size = Vector2(260, 400)
layout_mode = 2
focus_mode = 2

[node name="CardBorder" type="Panel" parent="MenuContainer/DifficultyContainer/NormalCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BorderColor" type="ColorRect" parent="MenuContainer/DifficultyContainer/NormalCard/CardBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.47, 0.63, 0.4)

[node name="CardBG" type="ColorRect" parent="MenuContainer/DifficultyContainer/NormalCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.15, 0.2, 0.3, 0.95)

[node name="Content" type="VBoxContainer" parent="MenuContainer/DifficultyContainer/NormalCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="Header" type="Label" parent="MenuContainer/DifficultyContainer/NormalCard/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.52, 0.81, 1, 1)
theme_override_font_sizes/font_size = 28
text = "NORMAL"
horizontal_alignment = 1

[node name="IconContainer" type="CenterContainer" parent="MenuContainer/DifficultyContainer/NormalCard/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="MenuContainer/DifficultyContainer/NormalCard/Content/IconContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture = ExtResource("2_normal")
expand_mode = 1
stretch_mode = 5

[node name="StatsContainer" type="VBoxContainer" parent="MenuContainer/DifficultyContainer/NormalCard/Content"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PlayerLabel" type="Label" parent="MenuContainer/DifficultyContainer/NormalCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
text = "PLAYER"
horizontal_alignment = 1

[node name="PlayerStats" type="Label" parent="MenuContainer/DifficultyContainer/NormalCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "45 HP | 10 Mana
2 cards/turn | 5 in hand"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="MenuContainer/DifficultyContainer/NormalCard/Content/StatsContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="AILabel" type="Label" parent="MenuContainer/DifficultyContainer/NormalCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
text = "AI"
horizontal_alignment = 1

[node name="AIStats" type="Label" parent="MenuContainer/DifficultyContainer/NormalCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8666667, 0.6862745, 0.7647059, 1)
theme_override_font_sizes/font_size = 13
text = "35 HP | 10 Mana
2 cards/turn | Balanced"
horizontal_alignment = 1

[node name="HardCard" type="Panel" parent="MenuContainer/DifficultyContainer"]
custom_minimum_size = Vector2(260, 400)
layout_mode = 2
focus_mode = 2

[node name="CardBorder" type="Panel" parent="MenuContainer/DifficultyContainer/HardCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BorderColor" type="ColorRect" parent="MenuContainer/DifficultyContainer/HardCard/CardBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.9, 0.49, 0.13, 0.4)

[node name="CardBG" type="ColorRect" parent="MenuContainer/DifficultyContainer/HardCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.25, 0.15, 0.1, 0.95)

[node name="Content" type="VBoxContainer" parent="MenuContainer/DifficultyContainer/HardCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="Header" type="Label" parent="MenuContainer/DifficultyContainer/HardCard/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.65, 0.25, 1)
theme_override_font_sizes/font_size = 28
text = "HARD"
horizontal_alignment = 1

[node name="IconContainer" type="CenterContainer" parent="MenuContainer/DifficultyContainer/HardCard/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="MenuContainer/DifficultyContainer/HardCard/Content/IconContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture = ExtResource("3_hard")
expand_mode = 1
stretch_mode = 5

[node name="StatsContainer" type="VBoxContainer" parent="MenuContainer/DifficultyContainer/HardCard/Content"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PlayerLabel" type="Label" parent="MenuContainer/DifficultyContainer/HardCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
text = "PLAYER"
horizontal_alignment = 1

[node name="PlayerStats" type="Label" parent="MenuContainer/DifficultyContainer/HardCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "45 HP | 10 Mana
1 card/turn | 5 in hand"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="MenuContainer/DifficultyContainer/HardCard/Content/StatsContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="AILabel" type="Label" parent="MenuContainer/DifficultyContainer/HardCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
text = "AI"
horizontal_alignment = 1

[node name="AIStats" type="Label" parent="MenuContainer/DifficultyContainer/HardCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8680392, 0.68730694, 0.76331353, 1)
theme_override_font_sizes/font_size = 13
text = "40 HP | 10 Mana
2 cards/turn | Aggressive"
horizontal_alignment = 1

[node name="ExpertCard" type="Panel" parent="MenuContainer/DifficultyContainer"]
custom_minimum_size = Vector2(260, 400)
layout_mode = 2
focus_mode = 2

[node name="CardBorder" type="Panel" parent="MenuContainer/DifficultyContainer/ExpertCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BorderColor" type="ColorRect" parent="MenuContainer/DifficultyContainer/ExpertCard/CardBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.91, 0.3, 0.3, 0.4)

[node name="CardBG" type="ColorRect" parent="MenuContainer/DifficultyContainer/ExpertCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.1, 0.1, 0.95)

[node name="Content" type="VBoxContainer" parent="MenuContainer/DifficultyContainer/ExpertCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="Header" type="Label" parent="MenuContainer/DifficultyContainer/ExpertCard/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = "EXPERT"
horizontal_alignment = 1

[node name="IconContainer" type="CenterContainer" parent="MenuContainer/DifficultyContainer/ExpertCard/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="MenuContainer/DifficultyContainer/ExpertCard/Content/IconContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture = ExtResource("4_expert")
expand_mode = 1
stretch_mode = 5

[node name="StatsContainer" type="VBoxContainer" parent="MenuContainer/DifficultyContainer/ExpertCard/Content"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PlayerLabel" type="Label" parent="MenuContainer/DifficultyContainer/ExpertCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
text = "PLAYER"
horizontal_alignment = 1

[node name="PlayerStats" type="Label" parent="MenuContainer/DifficultyContainer/ExpertCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "55 HP | 9 Mana
1 card/turn | 6 in hand"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="MenuContainer/DifficultyContainer/ExpertCard/Content/StatsContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="AILabel" type="Label" parent="MenuContainer/DifficultyContainer/ExpertCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
text = "AI"
horizontal_alignment = 1

[node name="AIStats" type="Label" parent="MenuContainer/DifficultyContainer/ExpertCard/Content/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8666667, 0.6862745, 0.7647059, 1)
theme_override_font_sizes/font_size = 13
text = "42 HP | 11 Mana
3 cards/turn | Brutal"
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 30
alignment = 1

[node name="BackButton" type="Button" parent="MenuContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "⬅️ BACK"

[node name="StartButton" type="Button" parent="MenuContainer/ButtonsContainer"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "START GAME"

[node name="AudioManager" type="Node" parent="."]

[node name="UIPlayer" type="AudioStreamPlayer" parent="AudioManager"]
volume_db = -5.0

[node name="HoverPlayer" type="AudioStreamPlayer" parent="AudioManager"]
volume_db = -12.0
